--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -67,6 +67,7 @@
     name: "{{ ntfy_container_network }}"
     driver: bridge
     driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
+  register: ntfy_network_creation_result
 
 - name: Ensure ntfy container network is created via ansible.builtin.command
   when: devture_systemd_docker_base_container_network_creation_method == 'command'
@@ -76,9 +77,9 @@
       {% if devture_systemd_docker_base_ipv6_enabled %}--ipv6{% endif %}
       {{ devture_systemd_docker_base_container_networks_driver_options_string }}
       {{ ntfy_container_network }}
-  register: network_creation_result
-  changed_when: network_creation_result.rc == 0
-  failed_when: network_creation_result.rc != 0 and 'already exists' not in network_creation_result.stderr
+  register: ntfy_network_creation_result
+  changed_when: ntfy_network_creation_result.rc == 0
+  failed_when: ntfy_network_creation_result.rc != 0 and 'already exists' not in ntfy_network_creation_result.stderr
 
 - name: Ensure ntfy systemd service is present
   ansible.builtin.template:
