--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -186,7 +186,7 @@ ntfy_hsts_preload_enabled: false
 
 # List of systemd services that the ntfy systemd service depends on
 ntfy_systemd_required_services_list: "{{ ntfy_systemd_required_services_list_default + ntfy_systemd_required_services_list_auto + ntfy_systemd_required_services_list_custom }}"
-ntfy_systemd_required_services_list_default: "{{ [devture_systemd_docker_base_docker_service_name] if devture_systemd_docker_base_docker_service_name else [] }}"
+ntfy_systemd_required_services_list_default: "{{ [sysd_docker_service] if sysd_docker_service else [] }}"
 ntfy_systemd_required_services_list_auto: []
 ntfy_systemd_required_services_list_custom: []
 
