--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -39,42 +39,42 @@
     group: "{{ ntfy_gid }}"
 
 - name: Ensure ntfy container image is pulled via community.docker.docker_image
-  when: devture_systemd_docker_base_container_image_pull_method == 'ansible-module'
+  when: sysd_docker_image_pull_method == 'ansible-module'
   community.docker.docker_image:
     name: "{{ ntfy_container_image }}"
     source: "{{ 'pull' if ansible_version.major > 2 or ansible_version.minor > 7 else omit }}"
     force_source: "{{ ntfy_container_image_force_pull if ansible_version.major > 2 or ansible_version.minor >= 8 else omit }}"
     force: "{{ omit if ansible_version.major > 2 or ansible_version.minor >= 8 else ntfy_container_image_force_pull }}"
   register: result
-  retries: "{{ devture_playbook_help_container_retries_count }}"
-  delay: "{{ devture_playbook_help_container_retries_delay }}"
+  retries: "{{ container_retry }}"
+  delay: "{{ container_retry_delay }}"
   until: result is not failed
 
 - name: Ensure ntfy container image is pulled via ansible.builtin.command
-  when: devture_systemd_docker_base_container_image_pull_method == 'command'
+  when: sysd_docker_image_pull_method == 'command'
   ansible.builtin.command:
-    cmd: "{{ devture_systemd_docker_base_host_command_docker }} pull {{ ntfy_container_image }}"
+    cmd: "{{ sysd_docker_host_command }} pull {{ ntfy_container_image }}"
   register: result
-  retries: "{{ devture_playbook_help_container_retries_count }}"
-  delay: "{{ devture_playbook_help_container_retries_delay }}"
+  retries: "{{ container_retry }}"
+  delay: "{{ container_retry_delay }}"
   until: result is not failed
   changed_when: "'Downloaded newer image' in result.stdout"
 
 - name: Ensure ntfy container network is created via community.docker.docker_network
-  when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
+  when: sysd_docker_net_creation_method == 'ansible-module'
   community.docker.docker_network:
-    enable_ipv6: "{{ devture_systemd_docker_base_ipv6_enabled }}"
+    enable_ipv6: "{{ sysd_docker_ipv6_enabled }}"
     name: "{{ ntfy_container_network }}"
     driver: bridge
-    driver_options: "{{ devture_systemd_docker_base_container_networks_driver_options }}"
+    driver_options: "{{ sysd_docker_net_driver_opts }}"
 
 - name: Ensure ntfy container network is created via ansible.builtin.command
-  when: devture_systemd_docker_base_container_network_creation_method == 'command'
+  when: sysd_docker_net_creation_method == 'command'
   ansible.builtin.command:
     cmd: >-
-      {{ devture_systemd_docker_base_host_command_docker }} network create
-      {% if devture_systemd_docker_base_ipv6_enabled %}--ipv6{% endif %}
-      {{ devture_systemd_docker_base_container_networks_driver_options_string }}
+      {{ sysd_docker_host_command }} network create
+      {% if sysd_docker_ipv6_enabled %}--ipv6{% endif %}
+      {{ sysd_docker_net_driver_opts_string }}
       {{ ntfy_container_network }}
   register: network_creation_result
   changed_when: network_creation_result.rc == 0
@@ -83,5 +83,5 @@
 - name: Ensure ntfy systemd service is present
   ansible.builtin.template:
     src: "{{ role_path }}/templates/systemd/ntfy.service.j2"
-    dest: "{{ devture_systemd_docker_base_systemd_path }}/{{ ntfy_identifier }}.service"
+    dest: "{{ sysd_docker_service_path }}/{{ ntfy_identifier }}.service"
     mode: "0644"
