--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -6,7 +6,7 @@
 ---
 - name: Check existence of ntfy systemd service
   ansible.builtin.stat:
-    path: "{{ devture_systemd_docker_base_systemd_path }}/{{ ntfy_identifier }}.service"
+    path: "{{ sysd_docker_service_path }}/{{ ntfy_identifier }}.service"
   register: ntfy_service_stat
 
 - name: Uninstall ntfy systemd services and files
@@ -21,7 +21,7 @@
 
     - name: Ensure ntfy systemd service does not exist
       ansible.builtin.file:
-        path: "{{ devture_systemd_docker_base_systemd_path }}/{{ ntfy_identifier }}.service"
+        path: "{{ sysd_docker_service_path }}/{{ ntfy_identifier }}.service"
         state: absent
 
     - name: Ensure ntfy support file does not exist
@@ -56,16 +56,16 @@
       failed_when: false
 
     - name: Ensure ntfy container network does not exist via community.docker.docker_network
-      when: devture_systemd_docker_base_container_network_creation_method == 'ansible-module'
+      when: sysd_docker_net_creation_method == 'ansible-module'
       community.docker.docker_network:
         name: "{{ ntfy_container_network }}"
         state: absent
 
     - name: Ensure ntfy container network does not exist via ansible.builtin.command
-      when: devture_systemd_docker_base_container_network_creation_method == 'command'
+      when: sysd_docker_net_creation_method == 'command'
       ansible.builtin.command:
         cmd: >-
-          {{ devture_systemd_docker_base_host_command_docker }} network rm
+          {{ sysd_docker_host_command }} network rm
           {{ ntfy_container_network }}
       register: network_deletion_result
       changed_when: ntfy_container_network in network_deletion_result.stdout
@@ -79,9 +79,9 @@
 - name: Notify if ntfy local data remains
   when: ntfy_data_path_stat.stat.exists | bool
   ansible.builtin.set_fact:
-    devture_playbook_runtime_messages_list: |
+    runtime_messages: |
       {{
-        devture_playbook_runtime_messages_list | default([])
+        runtime_messages | default([])
         +
         [
           "Note: As the local ntfy instance has been removed, some old data remains in `" + ntfy_data_path + "`. Feel free to delete it."
